Fixed: search suggestion/auto correct with multiple words Added: search link on words suggestions/auto correct

--- a/template/default/style.css
+++ b/template/default/style.css
@@ -1082,4 +1082,10 @@ img.btn_close {
   display: none;
 }
 
+.search-suggestion-link {
+  font-size: 120%;
+  color: #ffffff;
+  font-style: italic;
+  text-decoration: underline;
+}
 
