--- a/admin/admin_template/default/style.css
+++ b/admin/admin_template/default/style.css
@@ -375,6 +375,16 @@ a.printReport:active {
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
+.button-danger {
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#e80000), to(#4e0000));
+  background-image: -moz-linear-gradient(top, #e80000, #4e0000);
+  background-image: -ms-linear-gradient(top, #e80000, #4e0000);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e80000), color-stop(100%, #4e0000));
+  background-image: -webkit-linear-gradient(top, #e80000, #4e0000);
+  background-image: -o-linear-gradient(top, #e80000, #4e0000);
+  background-image: linear-gradient(top, #e80000, #4e0000);
+}
+
 .headerText2 {
   float: right;
   background-color:#000 !important;
@@ -1072,4 +1082,14 @@ input.small_input {
 .member_notes {
   color: #ff0000;
   text-decoration: blink;
+}
+
+.input-icon {
+  padding: 0;
+  height: 28px;
+}
+
+.input-icon .icon-setting {
+  background: url(media/gear.png) center center no-repeat;
+  padding: 20px 14px 6px;
 }
