tambah opsi webcam dgn html5

--- a/admin/admin_template/default/style.css
+++ b/admin/admin_template/default/style.css
@@ -1105,3 +1105,46 @@ input.small_input {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b', endColorstr='#ffbd362f', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
+
+/** html5 webcam feature **/
+#my_container, #my_canvas, #my_vid {
+  width: 400px;
+  height: 300px;
+  border: 1px solid #333;
+  
+}
+
+#my_container {
+  position: relative;
+}
+
+#my_vid, #my_canvas {
+  float: left;
+  position: absolute;
+  left: 10;
+}
+
+#my_canvas {
+  visibility: hidden;
+}
+
+#my_frame {
+  border: 1px solid #CCC;
+  width: 160px;
+  height: 240px;
+  z-index: 1000;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#my_preview {
+  width: 160px;
+  height: 240px;
+  border: 1px solid #444;
+  display: none;
+}
+
