--- a/template/default/style.css
+++ b/template/default/style.css
@@ -1068,6 +1068,11 @@ h4.title {
 	padding-right:20px;
 }
 
+.highlight {
+	background: #fffa4d;
+	color: #000;
+}
+
 /*----------------------------------------------------------------*/
 /* For Responsive Layout */
 /*----------------------------------------------------------------*/
