Added: AWB constant for admin web directory Added: Sidebar using sidr jquery plugins for submenu in admin

--- a/admin/admin_template/default/style.css
+++ b/admin/admin_template/default/style.css
@@ -289,6 +289,10 @@ submenu
 	border-top-left-radius: 2px;
 }
 
+.subMenuHeader {
+	border-radius: 0;
+}
+
 .loader {
   margin-top:45px;
   background-color: #ff908a;
