--- a/admin/admin_template/default/style.css
+++ b/admin/admin_template/default/style.css
@@ -999,8 +999,7 @@ icon
   border: none;
 }
 
-.message li
-{
+.message li {
   margin-bottom:1px;
 }
 
@@ -1013,6 +1012,10 @@ icon
   border-color: #c43c35 #c43c35 #882a25;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   color:#ffffff;
+}
+
+.logout {
+  background-color: #c43c35;
 }
 
 .action_button
