--- a/admin/admin_template/meranti/style.css
+++ b/admin/admin_template/meranti/style.css
@@ -335,8 +335,7 @@ submenu
   margin-bottom:100px;
 }
 
-.button,
-.headerText2,
+.btn,
 input[type="submit"],
 input[type="button"],
 .tab,
@@ -363,8 +362,7 @@ a.printReport {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
-.button:hover,
-.headerText2:hover,
+.btn:hover,
 .editFormLink:hover,
 input[type="submit"]:active,
 input[type="button"]:active,
@@ -373,11 +371,6 @@ a.printReport:active {
   -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4), 0 1px 2px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4), 0 1px 2px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-.headerText2 {
-  float: right;
-  background-color:#000 !important;
 }
 
 .menuBoxInner {
@@ -1007,7 +1000,7 @@ icon
   color:#ffffff;
 }
 
-.action_button
+.btn-group
 {
   float: right;
   padding:0;
