--- a/template/meranti/style.css
+++ b/template/meranti/style.css
@@ -230,7 +230,7 @@ p.strip {
 {
 	z-index: 999;
 	padding-bottom: 60px;
-  
+
 }
 
 .content
@@ -328,10 +328,10 @@ p.strip {
 /* Search Layout Inside Result Search List */
 /*----------------------------------------------------------------*/
 .result-search .simply
-{  
+{
 	font-size:24px;
 	background: transparent url(images/search.png) center center no-repeat !important;
-	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#000000,endColorstr=#000000);  
+	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#000000,endColorstr=#000000);
 }
 
 
@@ -994,9 +994,9 @@ img.btn_close {
   width: 600px;
   padding: 0;
   border: none;
-  border-radius: 7px;  
-  background-color: rgba(0,0,0,0.9); 
-  
+  border-radius: 7px;
+  background-color: rgba(0,0,0,0.9);
+
 }
 
 #visitorCounterWrap #counterInfo {
@@ -1022,7 +1022,7 @@ img.btn_close {
 
 #visitorCounterForm input[type="text"]
 {
-  background-color: rgba(255,255,255,0.1);  
+  background-color: rgba(255,255,255,0.1);
   border:none;
   padding:10px;
   width: 330px;
@@ -1031,7 +1031,7 @@ img.btn_close {
 
 #visitorCounterWrap .fieldLabel
 {
-  white-space: nowrap;  
+  white-space: nowrap;
 }
 
 #visitorCounterWrap #counter
@@ -1058,7 +1058,7 @@ img.btn_close {
 
 .comment-input {
   display: block;
-  padding: 5px; 
+  padding: 5px;
 }
 
 .comment-found {
@@ -1089,3 +1089,18 @@ img.btn_close {
   text-decoration: underline;
 }
 
+.share-buttons {
+	clear: both;
+	float: right;
+	list-style: none;
+	margin: 3px;
+}
+
+.share-buttons li {
+	display: inline;
+}
+
+.share-buttons li a {
+	display: inline-block;
+	margin-right: 2px;
+}
