--- a/admin/admin_template/default/style.css
+++ b/admin/admin_template/default/style.css
@@ -136,6 +136,13 @@ div.clear {
   text-decoration:none;
 }
 
+#mainMenu a .keytip {
+	padding-left: 0;
+	padding-right: 5px;
+	margin-left: -10px;
+	border: none;
+}
+
 /*---------
 header
 -----------*/
@@ -476,7 +483,8 @@ icon
 .icon {
   text-decoration: none;
   border: 0;
-  display:block;
+  display: inline-block;
+	float: left;
   width: 96px;
   height: 96px;
   background-repeat: no-repeat;
@@ -859,4 +867,12 @@ input.small_input {
 .loanItemCodeInput, #pageContent .loanItemCodeInput {
 	padding: 5px;
 	background: rgb(48, 192, 251) !important;
+}
+
+.row {
+  margin-top: 10px;
+}
+
+.col-md-4 {
+	width: 30%;
 }
